fix bug mapper